<resources>
    <string name="app_name">fteam</string>
    <string name="intro_message">
        <![CDATA[
            This sample demonstrates how to record video using Camera2 API.
        ]]>
    </string>

    <string name="naviMenu_home">HOME</string>
    <string name="naviMenu_new">NEW</string>
    <string name="naviMenu_hot">HOT</string>
    <string name="naviMenu_history">HISTORY</string>
    <string name="naviMenu_upload">UPLOAD</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="action_search">Search</string>

    <string name="dynamic_rank">%1$d位</string>
    <string name="rank1">1位</string>
    <string name="rank2">2位</string>
    <string name="rank3">3位</string>
    <string name="blank_user_name">ユーザ名</string>
    <string name="blank_comp_time">--:--:--</string>
    <string name="blank_comp_name">競技名</string>

    <string name="drawer_open">1</string>
    <string name="drawer_close">0</string>

</resources>
