<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <VideoView
                android:id="@+id/compDetailVideoView"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/compDetailRankTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rank1"
                    android:textAlignment="center"
                    android:textSize="@dimen/homeCompRank"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/compDetailTimeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank_comp_time"
                    android:textAlignment="center"
                    android:textSize="@dimen/homeCompTime"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/compDetailUserTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank_user_name"
                    android:textAlignment="textEnd"
                    android:textSize="@dimen/homeCompUserName"
                    android:textStyle="italic"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>