<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/comp_detail_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/compDetailImageView"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/compDetailRankTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rank1"
                    android:textAlignment="center"
                    android:textSize="@dimen/homeCompRank"
                    android:textStyle="bold"
                    android:visibility="gone"/>
                <ImageView
                    android:id="@+id/compDetailRankImageView"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/compDetailTimeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank_comp_time"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="30dp" />

                <TextView
                    android:layout_weight="1"
                    android:gravity="center"
                    android:id="@+id/compDetailUserTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blank_user_name"
                    android:textAlignment="textEnd"
                    android:textSize="16dp"
                    android:layout_marginRight="5dp"
                    android:textStyle="italic"
                    tools:ignore="RtlCompat" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>